--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,13 +10,14 @@
     "@types/node": "16.11.36",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
+    "axios": "0.24.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.3",
-    "react-router-dom": "6.2.2",
-    "typescript": "4.7.2",
-    "axios": "0.24.0",
     "react-icons": "4.3.1",
+    "react-router-dom": "6.2.2",
+    "react-scripts": "4.0.3",
+    "typescript": "4.7.2",
+    "uuidv4": "^6.2.13",
     "web-vitals": "2.1.4"
   },
   "scripts": {
